# OuroborOS

./: CMakeLists.txt  README.md  WHITEPAPER.md  config.cmake  dts.cmake  image.its  postconfig.cmake  test.txt
cmake/: OuCommon.cmake
dts/: qemu_mips.dts
fdt/: CMakeLists.txt
fit/: CMakeLists.txt  fdt.itsi.in  ikernel.itsi.in  image.its
ikernel/: CMakeLists.txt  eat_self.c  main.c
ikernel/arch/mips/: CMakeLists.txt  config.c  config.ld.in  context.c  entry.S  hang.c  head.S  kernel.ld  main.c  mmu.c  shadow.c
ikernel/include/ouroboros/arch/mips/: config.h
ikernel/include/ouroboros/arch/mips/ikernel/: config.h  context.h  entry.h  mmu.h  shadow.h  userspace.h
ikernel/include/ouroboros/ikernel/: common.h  config.h  context.h  eat_self.h  main.h  mmu.h
include/: CMakeLists.txt  libfdt.h  libfdt_env.h
include/ouroboros/: common.h  config.h.in  errno.h  fdt.h  genconfig.h.in  stddef.h  stdint.h  stdint.h.in  stdio.h  stdlib.h  string.h  unistd.h
include/ouroboros/arch/mips/: asm.h  common.h  context.h  cp0.h  entry.h  shadow.h  syscall.h  uhi.h
include/ouroboros/hw/uart/: 16550.h
include/ouroboros/kernel/: config.h  eat_self.h
kernel/: CMakeLists.txt  config.c  eat_self.c  entry.S  head.S  kernel.ld  main.c  mmu.c  uhi.S
kernel/arch/mips/: CMakeLists.txt  config.c  config.cmake  config.h  config.h.in  config.ld.in  entry.S  genconfig.h.in  head.S  kernel.ld  mmu.c  postconfig.cmake  shadow.c
kernel/arch/mips/its/: kernel.itsi.in
kernel/include/: CMakeLists.txt
kernel/include/ouroboros/kernel/: config.h  mmu.h
ldinitrd/: CMakeLists.txt
ldinitrd/arch/: CMakeLists.txt
ldinitrd/arch/mips/: CMakeLists.txt  early_data.c  head.S  ldinitrd.ld
libfdt/: CMakeLists.txt  fdt.c  fdt_overlay.c  fdt_ro.c  fdt_rw.c  fdt_sw.c  fdt_wip.c
libou/: CMakeLists.txt  _fprintf.c  _vfprintf.c  memchr.c  memcmp.c  memcpy.c  memmove.c  memrcpy.c  sprintf.c  strchr.c  strcpy.c  strlen.c  strnlen.c  vsprintf.c
libou_fdt/: CMakeLists.txt  fdt.c
tools/: ou_prefix.py
